# rags

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
rags/: __init__.py  main.py  models.py  retriever.py  utils.py  version.py
tests/: test_main.py  test_models.py  test_retriever.py  test_utils.py
