[project]
name = "rags"
version = "0.2.0"
description = "A Retrieval-Augmented Generation (RAG) system built with PydanticAI and Chroma DB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "pydantic-ai>=0.0.42",
    "sentence-transformers>=3.4.1",
]

[project.scripts]
rags = "rags.main:main_cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
