[project]
name = "rags"
dynamic = ["version"]
description = "A Retrieval-Augmented Generation (RAG) system built with PydanticAI and Chroma DB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "pydantic-ai>=0.0.42",
    "sentence-transformers>=3.4.1",
]

[project.scripts]
rags = "rags.main:main_cli"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "rags.version.__version__"}
